--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: rust
 rust:
   - 1.2.0
 script:
-  - cargo build --verbose --all
-  - cargo test --verbose --all
+  - cargo build
+  - cargo test
