--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: rust
 rust:
   - 1.2.0
+cache: cargo
 script:
-  - cargo build
-  - cargo test
+  - cargo build --verbose && cargo test --verbose
